@@ -17,6 +17,7 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for CVS:
 
+server/gods.c: Fix crash for monsters without appropriate god.
 server/gods.c: Add missing braces around body of if statement.
 Andreas Kirschbaum 2005-08-14
 
